--- a/Dockerfile.GitHubActions
+++ b/Dockerfile.GitHubActions
@@ -1,31 +1,21 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 ENV TZ=Asia/Shanghai
-ENV GOSU_VERSION=1.17
 
 ENV UMASK=022
-ENV PUID=1000
-ENV PGID=1000
-
+ENV PUID=0
+ENV PGID=0
 
 WORKDIR /app
 VOLUME [ "/rec" ]
 
+COPY --from=tianon/gosu:1.17 /gosu /usr/local/bin/
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 COPY ./BililiveRecorder.Cli/bin/docker_out /app
 
-RUN apt-get update && \
-    apt-get install -y wget && \
-    rm -rf /var/lib/apt/lists/* && \
-    useradd -r -g users user && \
-    chmod a+x /usr/local/bin/docker-entrypoint.sh && \
+RUN chmod a+x /usr/local/bin/docker-entrypoint.sh && \
+    chmod -R 777 /app && \
     ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
     echo $TZ > /etc/timezone
-
-ARG TARGETPLATFORM
-
-RUN if [ "$TARGETPLATFORM" = "linux/amd64" ]; then wget -O /usr/local/bin/gosu https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64; fi; if [ "$TARGETPLATFORM" = "linux/arm64" ]; then wget -O /usr/local/bin/gosu https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-arm64; fi; if [ "$TARGETPLATFORM" = "linux/arm/v7" ]; then wget -O /usr/local/bin/gosu https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-armhf; fi
-
-RUN chmod +x /usr/local/bin/gosu
 
 EXPOSE 2356/tcp
 
